dev: Decrease .logo z-index to prevent popup overlapping.

--- a/common/common.scss
+++ b/common/common.scss
@@ -114,7 +114,7 @@ $scroll-bar: 15px;
 
   .logo {
     position: relative;
-    z-index: 500;
+    z-index: 499;
     display: flex;
     align-items: center;
     min-width: 65px;
